<resources>
    <string name="app_name">MyModules</string>
    <string name="modules">My Modules</string>
    <string name="c346">C346 - Mobile App Development</string>
    <string name="c206">C206 - Software Development Process</string>
    <string name="back">Back</string>
    <string name="C235">C235 - IT Security and Management</string>
    <string name="C203">C203 - Web Appln Development in php</string>
    <string name="C218">C218 - UI/UX Design for Apps</string>
</resources>